--- a/src/scss/utilities/_mixins.scss
+++ b/src/scss/utilities/_mixins.scss
@@ -23,8 +23,8 @@
 
 @mixin modal-close($top, $right) {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: $top;
+  right: $right;
 }
 
 /*Responsize font size*/
